fix headers z-index

--- a/src/assets/queennailsdesign.scss
+++ b/src/assets/queennailsdesign.scss
@@ -36,6 +36,7 @@
   top: 0;
   padding: 0.75rem 3rem;
   text-align: center;
+  z-index: 9999;
 
   h1 {
     font-weight: normal;
